<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">whoIsMyRepresentative</string>
    <string name="search_greeting">Find a Representative! Enter one of the following:</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_or">--Or--</string>
    <string name="zip">Zip</string>
    <string name="state">State</string>
    <string name="last_name">Last Name</string>
    <string name="search">Search</string>
    <string name="error_title">There was a problem in congress.</string>
    <string name="error_message">We were unable to retrieve the list of representatives.</string>

    <string-array name="states">
        <item>"Select a State"</item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string name="title_activity_list_representatives">ListRepresentativesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_representative">RepresentativeActivity</string>

</resources>
